--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # my stuff
 Libs
 dnSpy
+*.zip
 
-# easy to use shortcut :)
-Risk\ of\ Rain\ 2.lnk
+# easy to use shortcuts :)
+*.lnk
 
 
 # VS stuff
