--- a/MoreArtifacts/MoreArtifacts.csproj
+++ b/MoreArtifacts/MoreArtifacts.csproj
@@ -100,6 +100,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\conglomerate_deselected.png" />
+    <None Include="Assets\conglomerate_selected.png" />
     <Content Include="Assets\congregate_deselected.png" />
     <Content Include="Assets\congregate_selected.png" />
   </ItemGroup>
