the nights work
- fixing things up for next release
- finally using publicized dll
- LanguageAPI integration
- ignore list for conglomerate
- for some reason the artifacts aren't showing up in game

--- a/MoreArtifacts/MoreArtifacts.csproj
+++ b/MoreArtifacts/MoreArtifacts.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ConglomerateArtifact.cs" />
     <Compile Include="CongregateArtifact.cs" />
     <Compile Include="MoreArtifacts.cs" />
+    <Compile Include="MoreArtifactsConfig.cs" />
     <Compile Include="NewArtifact.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
