--- a/MoreArtifacts/Metadata/manifest.json
+++ b/MoreArtifacts/Metadata/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "MoreArtifacts",
-    "version_number": "1.2.5",
+    "version_number": "1.2.6",
     "website_url": "https://github.com/EvanTich/ror2-modding/tree/master/MoreArtifacts",
-    "description": "Adds two more artifacts to the game! Works in multiplayer.",
+    "description": "Adds three more artifacts to the game! Works in multiplayer.",
     "dependencies": [
         "bbepis-BepInExPack-5.3.1",
         "tristanmcpherson-R2API-2.5.6"
